修正首頁s1 bug (+1 squashed commit) Squashed commits: [b85e605] addd

--- a/src/sass/layout/_s1.scss
+++ b/src/sass/layout/_s1.scss
@@ -2,7 +2,7 @@
 .s1 {
     background-image: url('../images/bg_ind_s1@1x.jpg');
     background-size: cover;
-    padding: 100px 0;
+    padding: 150px 0 100px;
     background-repeat: no-repeat;
     @include m() {
         background-position: center;
